--- a/News to lyric.ipynb
+++ b/News to lyric.ipynb
@@ -4,23 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Our project"
+    "# News to poems"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import nltk"
+    "import nltk\n",
+    "from pprint import pprint\n",
+    "from nltk.parse.stanford import StanfordDependencyParser"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -48,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -107,6 +109,87 @@
    ],
    "source": [
     "print grammar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before proceeding you should download zip-archive with stanford parser:\n",
+    "\n",
+    "http://nlp.stanford.edu/software/stanford-parser-full-2015-04-20.zip\n",
+    "\n",
+    "We need two files from there:\n",
+    "- stanford/stanford-parser.jar\n",
+    "- stanford/stanford-parser-3.5.2-models.jar\n",
+    "\n",
+    "Create a directory 'stanford' and put them there."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "British scientist says memories of spending the night with Marilyn Monroe could be implanted into the brain\n",
+      "[((u'says', u'VBZ'), u'nsubj', (u'scientist', u'NN')),\n",
+      " ((u'scientist', u'NN'), u'amod', (u'British', u'JJ')),\n",
+      " ((u'says', u'VBZ'), u'dobj', (u'memories', u'NNS')),\n",
+      " ((u'memories', u'NNS'), u'nmod', (u'spending', u'NN')),\n",
+      " ((u'spending', u'NN'), u'case', (u'of', u'IN')),\n",
+      " ((u'says', u'VBZ'), u'nmod:tmod', (u'night', u'NN')),\n",
+      " ((u'night', u'NN'), u'det', (u'the', u'DT')),\n",
+      " ((u'says', u'VBZ'), u'advcl', (u'implanted', u'VBN')),\n",
+      " ((u'implanted', u'VBN'), u'mark', (u'with', u'IN')),\n",
+      " ((u'implanted', u'VBN'), u'nsubjpass', (u'Monroe', u'NNP')),\n",
+      " ((u'Monroe', u'NNP'), u'compound', (u'Marilyn', u'NNP')),\n",
+      " ((u'implanted', u'VBN'), u'aux', (u'could', u'MD')),\n",
+      " ((u'implanted', u'VBN'), u'auxpass', (u'be', u'VB')),\n",
+      " ((u'implanted', u'VBN'), u'nmod', (u'brain', u'NN')),\n",
+      " ((u'brain', u'NN'), u'case', (u'into', u'IN')),\n",
+      " ((u'brain', u'NN'), u'det', (u'the', u'DT'))]\n"
+     ]
+    }
+   ],
+   "source": [
+    "parser = StanfordDependencyParser(path_to_jar='stanford/stanford-parser.jar',\\\n",
+    "                                  path_to_models_jar='stanford/stanford-parser-3.5.2-models.jar')\n",
+    "parsed_tree = list(parser.parse(title_words))\n",
+    "\n",
+    "print title\n",
+    "pprint(list(parsed_tree[0].triples()))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[((u'put', u'VBN'), u'nsubjpass', (u'ball', u'NN')),\n",
+      " ((u'ball', u'NN'), u'det', (u'A', u'DT')),\n",
+      " ((u'put', u'VBN'), u'auxpass', (u'is', u'VBZ')),\n",
+      " ((u'put', u'VBN'), u'nmod', (u'box', u'NN')),\n",
+      " ((u'box', u'NN'), u'case', (u'into', u'IN')),\n",
+      " ((u'box', u'NN'), u'det', (u'the', u'DT'))]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_sent = \"A ball is put into the box\"\n",
+    "pprint(list(list(parser.parse(test_sent.split(' ')))[0].triples()))"
    ]
   },
   {
