--- a/News to lyric.ipynb
+++ b/News to lyric.ipynb
@@ -193,13 +193,188 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Morphological analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "def tokenize(s, pattern=r'\\W+'):\n",
+    "    return filter(None, re.split(pattern, s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There [[u'DH', u'EH1', u'R']]\n",
+      "was [[u'W', u'AA1', u'Z'], [u'W', u'AH1', u'Z'], [u'W', u'AH0', u'Z'], [u'W', u'AO1', u'Z']]\n",
+      "a [[u'AH0'], [u'EY1']]\n",
+      "little [[u'L', u'IH1', u'T', u'AH0', u'L']]\n",
+      "guinea [[u'G', u'IH1', u'N', u'IY0']]\n",
+      "pig [[u'P', u'IH1', u'G']]\n",
+      "Who [[u'HH', u'UW1']]\n",
+      "being [[u'B', u'IY1', u'IH0', u'NG']]\n",
+      "little [[u'L', u'IH1', u'T', u'AH0', u'L']]\n",
+      "was [[u'W', u'AA1', u'Z'], [u'W', u'AH1', u'Z'], [u'W', u'AH0', u'Z'], [u'W', u'AO1', u'Z']]\n",
+      "not [[u'N', u'AA1', u'T']]\n",
+      "big [[u'B', u'IH1', u'G']]\n",
+      "He [[u'HH', u'IY1']]\n",
+      "always [[u'AO1', u'L', u'W', u'EY2', u'Z'], [u'AO1', u'L', u'W', u'IY0', u'Z']]\n",
+      "walked [[u'W', u'AO1', u'K', u'T']]\n",
+      "upon [[u'AH0', u'P', u'AA1', u'N']]\n",
+      "his [[u'HH', u'IH1', u'Z'], [u'HH', u'IH0', u'Z']]\n",
+      "feet [[u'F', u'IY1', u'T']]\n",
+      "And [[u'AH0', u'N', u'D'], [u'AE1', u'N', u'D']]\n",
+      "never [[u'N', u'EH1', u'V', u'ER0']]\n",
+      "fasted [[u'F', u'AE1', u'S', u'T', u'IH0', u'D']]\n",
+      "when [[u'W', u'EH1', u'N'], [u'HH', u'W', u'EH1', u'N'], [u'W', u'IH1', u'N'], [u'HH', u'W', u'IH1', u'N']]\n",
+      "he [[u'HH', u'IY1']]\n",
+      "eat [[u'IY1', u'T']]\n",
+      "When [[u'W', u'EH1', u'N'], [u'HH', u'W', u'EH1', u'N'], [u'W', u'IH1', u'N'], [u'HH', u'W', u'IH1', u'N']]\n",
+      "from [[u'F', u'R', u'AH1', u'M'], [u'F', u'ER0', u'M']]\n",
+      "a [[u'AH0'], [u'EY1']]\n",
+      "place [[u'P', u'L', u'EY1', u'S']]\n",
+      "he [[u'HH', u'IY1']]\n",
+      "run [[u'R', u'AH1', u'N']]\n",
+      "away [[u'AH0', u'W', u'EY1']]\n",
+      "He [[u'HH', u'IY1']]\n",
+      "never [[u'N', u'EH1', u'V', u'ER0']]\n",
+      "at [[u'AE1', u'T']]\n",
+      "the [[u'DH', u'AH0'], [u'DH', u'AH1'], [u'DH', u'IY0']]\n",
+      "place [[u'P', u'L', u'EY1', u'S']]\n",
+      "did [[u'D', u'IH1', u'D'], [u'D', u'IH0', u'D']]\n",
+      "stay [[u'S', u'T', u'EY1']]\n",
+      "And [[u'AH0', u'N', u'D'], [u'AE1', u'N', u'D']]\n",
+      "while [[u'W', u'AY1', u'L'], [u'HH', u'W', u'AY1', u'L']]\n",
+      "he [[u'HH', u'IY1']]\n",
+      "run [[u'R', u'AH1', u'N']]\n",
+      "as [[u'AE1', u'Z'], [u'EH1', u'Z']]\n",
+      "I [[u'AY1']]\n",
+      "am [[u'AE1', u'M'], [u'EY1', u'EH1', u'M']]\n",
+      "told [[u'T', u'OW1', u'L', u'D']]\n",
+      "He [[u'HH', u'IY1']]\n",
+      "never [[u'N', u'EH1', u'V', u'ER0']]\n",
+      "stood [[u'S', u'T', u'UH1', u'D']]\n",
+      "still [[u'S', u'T', u'IH1', u'L']]\n",
+      "for [[u'F', u'AO1', u'R'], [u'F', u'ER0'], [u'F', u'R', u'ER0']]\n",
+      "young [[u'Y', u'AH1', u'NG']]\n",
+      "or [[u'AO1', u'R'], [u'ER0']]\n",
+      "old [[u'OW1', u'L', u'D']]\n",
+      "He [[u'HH', u'IY1']]\n",
+      "often [[u'AO1', u'F', u'AH0', u'N'], [u'AO1', u'F', u'T', u'AH0', u'N']]\n",
+      "squeaked [[u'S', u'K', u'W', u'IY1', u'K', u'T']]\n",
+      "and [[u'AH0', u'N', u'D'], [u'AE1', u'N', u'D']]\n",
+      "sometimes [[u'S', u'AH0', u'M', u'T', u'AY1', u'M', u'Z'], [u'S', u'AH1', u'M', u'T', u'AY2', u'M', u'Z']]\n",
+      "violent [[u'V', u'AY1', u'AH0', u'L', u'AH0', u'N', u'T'], [u'V', u'AY1', u'L', u'AH0', u'N', u'T']]\n",
+      "And [[u'AH0', u'N', u'D'], [u'AE1', u'N', u'D']]\n",
+      "when [[u'W', u'EH1', u'N'], [u'HH', u'W', u'EH1', u'N'], [u'W', u'IH1', u'N'], [u'HH', u'W', u'IH1', u'N']]\n",
+      "he [[u'HH', u'IY1']]\n",
+      "squeaked [[u'S', u'K', u'W', u'IY1', u'K', u'T']]\n",
+      "he [[u'HH', u'IY1']]\n",
+      "never [[u'N', u'EH1', u'V', u'ER0']]\n",
+      "was [[u'W', u'AA1', u'Z'], [u'W', u'AH1', u'Z'], [u'W', u'AH0', u'Z'], [u'W', u'AO1', u'Z']]\n",
+      "silent [[u'S', u'AY1', u'L', u'AH0', u'N', u'T']]\n",
+      "Though [[u'DH', u'OW1']]\n",
+      "never [[u'N', u'EH1', u'V', u'ER0']]\n",
+      "instructed [[u'IH0', u'N', u'S', u'T', u'R', u'AH1', u'K', u'T', u'AH0', u'D'], [u'IH0', u'N', u'S', u'T', u'R', u'AH1', u'K', u'T', u'IH0', u'D']]\n",
+      "by [[u'B', u'AY1']]\n",
+      "a [[u'AH0'], [u'EY1']]\n",
+      "cat [[u'K', u'AE1', u'T']]\n",
+      "He [[u'HH', u'IY1']]\n",
+      "knew [[u'N', u'UW1'], [u'N', u'Y', u'UW1']]\n",
+      "a [[u'AH0'], [u'EY1']]\n",
+      "mouse [[u'M', u'AW1', u'S']]\n",
+      "was [[u'W', u'AA1', u'Z'], [u'W', u'AH1', u'Z'], [u'W', u'AH0', u'Z'], [u'W', u'AO1', u'Z']]\n",
+      "not [[u'N', u'AA1', u'T']]\n",
+      "a [[u'AH0'], [u'EY1']]\n",
+      "rat [[u'R', u'AE1', u'T']]\n",
+      "One [[u'W', u'AH1', u'N'], [u'HH', u'W', u'AH1', u'N']]\n",
+      "day [[u'D', u'EY1']]\n",
+      "as [[u'AE1', u'Z'], [u'EH1', u'Z']]\n",
+      "I [[u'AY1']]\n",
+      "am [[u'AE1', u'M'], [u'EY1', u'EH1', u'M']]\n",
+      "certified [[u'S', u'ER1', u'T', u'AH0', u'F', u'AY2', u'D']]\n",
+      "He [[u'HH', u'IY1']]\n",
+      "took [[u'T', u'UH1', u'K']]\n",
+      "a [[u'AH0'], [u'EY1']]\n",
+      "whim [[u'W', u'IH1', u'M'], [u'HH', u'W', u'IH1', u'M']]\n",
+      "and [[u'AH0', u'N', u'D'], [u'AE1', u'N', u'D']]\n",
+      "fairly [[u'F', u'EH1', u'R', u'L', u'IY0']]\n",
+      "died [[u'D', u'AY1', u'D']]\n",
+      "And [[u'AH0', u'N', u'D'], [u'AE1', u'N', u'D']]\n",
+      "as [[u'AE1', u'Z'], [u'EH1', u'Z']]\n",
+      "I [[u'AY1']]\n",
+      "am [[u'AE1', u'M'], [u'EY1', u'EH1', u'M']]\n",
+      "told [[u'T', u'OW1', u'L', u'D']]\n",
+      "by [[u'B', u'AY1']]\n",
+      "men [[u'M', u'EH1', u'N']]\n",
+      "of [[u'AH1', u'V'], [u'AH0', u'V']]\n",
+      "sense [[u'S', u'EH1', u'N', u'S']]\n",
+      "He [[u'HH', u'IY1']]\n",
+      "never [[u'N', u'EH1', u'V', u'ER0']]\n",
+      "has [[u'HH', u'AE1', u'Z'], [u'HH', u'AH0', u'Z']]\n",
+      "been [[u'B', u'IH1', u'N'], [u'B', u'AH0', u'N'], [u'B', u'IH0', u'N']]\n",
+      "living [[u'L', u'IH1', u'V', u'IH0', u'NG']]\n",
+      "since [[u'S', u'IH1', u'N', u'S']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.corpus import cmudict\n",
+    "d = cmudict.dict()\n",
+    "\n",
+    "poem_file = open('data/guinea_pig.txt')\n",
+    "corpus = poem_file.readlines()\n",
+    "poem_file.close()\n",
+    "\n",
+    "poem_structure = [\n",
+    "    (8, [1,3,5,7],),\n",
+    "    (8, [1,3,5,7],),\n",
+    "    (8, [1,3,5,7],),\n",
+    "    (8, [1,3,5,7],),\n",
+    "]\n",
+    "for line in corpus:\n",
+    "    for token in tokenize(line):\n",
+    "        print token, d.get(token.lower())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO:\n",
+    "def num_of_syllables(line):\n",
+    "    pass\n",
+    "\n",
+    "def is_stressed(phoneme):\n",
+    "    pass\n",
+    "\n",
+    "def apply_structure(line):\n",
+    "    pass"
+   ]
   }
  ],
  "metadata": {
