--- a/News to lyric.ipynb
+++ b/News to lyric.ipynb
@@ -218,7 +218,8 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -366,11 +367,21 @@
    "outputs": [],
    "source": [
     "# TODO:\n",
-    "def num_of_syllables(line):\n",
-    "    pass\n",
+    "def num_of_syllables(phonetic_translation):\n",
+    "    number_of_syllables = 0\n",
+    "    for el in phonetic_translation:\n",
+    "        if el[-1].isdigit() == True:\n",
+    "            number_of_syllables += 1\n",
+    "        else:\n",
+    "            pass\n",
+    "    return number_of_syllables\n",
+    "        \n",
     "\n",
     "def is_stressed(phoneme):\n",
-    "    pass\n",
+    "    if phoneme[-1] == '1':\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
     "\n",
     "def apply_structure(line):\n",
     "    pass"
