Check if two words rhyme

--- a/News to lyric.ipynb
+++ b/News to lyric.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -360,11 +360,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[u'W', u'AA1', u'Z'] [u'B', u'IH0', u'K', u'AO1', u'Z'] False\n",
+      "[u'W', u'AA1', u'Z'] [u'B', u'IH0', u'K', u'AH1', u'Z'] False\n",
+      "[u'W', u'AA1', u'Z'] [u'B', u'IH0', u'K', u'AA1', u'Z'] True\n",
+      "[u'W', u'AA1', u'Z'] [u'B', u'IH0', u'K', u'AH0', u'Z'] False\n",
+      "[u'W', u'AH1', u'Z'] [u'B', u'IH0', u'K', u'AO1', u'Z'] False\n",
+      "[u'W', u'AH1', u'Z'] [u'B', u'IH0', u'K', u'AH1', u'Z'] True\n",
+      "[u'W', u'AH1', u'Z'] [u'B', u'IH0', u'K', u'AA1', u'Z'] False\n",
+      "[u'W', u'AH1', u'Z'] [u'B', u'IH0', u'K', u'AH0', u'Z'] False\n",
+      "[u'W', u'AH0', u'Z'] [u'B', u'IH0', u'K', u'AO1', u'Z'] False\n",
+      "[u'W', u'AH0', u'Z'] [u'B', u'IH0', u'K', u'AH1', u'Z'] False\n",
+      "[u'W', u'AH0', u'Z'] [u'B', u'IH0', u'K', u'AA1', u'Z'] False\n",
+      "[u'W', u'AH0', u'Z'] [u'B', u'IH0', u'K', u'AH0', u'Z'] True\n",
+      "[u'W', u'AO1', u'Z'] [u'B', u'IH0', u'K', u'AO1', u'Z'] True\n",
+      "[u'W', u'AO1', u'Z'] [u'B', u'IH0', u'K', u'AH1', u'Z'] False\n",
+      "[u'W', u'AO1', u'Z'] [u'B', u'IH0', u'K', u'AA1', u'Z'] False\n",
+      "[u'W', u'AO1', u'Z'] [u'B', u'IH0', u'K', u'AH0', u'Z'] False\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO:\n",
     "def num_of_syllables(phonetic_translation):\n",
@@ -384,8 +407,32 @@
     "        return False\n",
     "\n",
     "def apply_structure(line):\n",
-    "    pass"
+    "    pass\n",
+    "\n",
+    "def is_vowel(sound):\n",
+    "    return sound[-1].isdigit()\n",
+    "\n",
+    "def is_rhyme(pron1, pron2):\n",
+    "    vowels = [(i, sound) for i, sound in enumerate(pron1) if is_vowel(sound)]\n",
+    "    if vowels:\n",
+    "        idx, last_vowel = vowels[-1]\n",
+    "        return pron1[-(idx + 1):] == pron2[-(idx + 1):]\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "for pron1 in d.get('was'):\n",
+    "    for pron2 in d.get('because'):\n",
+    "        print pron1, pron2, is_rhyme(pron1, pron2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
