fit rhyme scheme :palm_tree:

--- a/News to lyric.ipynb
+++ b/News to lyric.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -216,146 +216,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There [[u'DH', u'EH1', u'R']]\n",
-      "was [[u'W', u'AA1', u'Z'], [u'W', u'AH1', u'Z'], [u'W', u'AH0', u'Z'], [u'W', u'AO1', u'Z']]\n",
-      "a [[u'AH0'], [u'EY1']]\n",
-      "little [[u'L', u'IH1', u'T', u'AH0', u'L']]\n",
-      "guinea [[u'G', u'IH1', u'N', u'IY0']]\n",
-      "pig [[u'P', u'IH1', u'G']]\n",
-      "Who [[u'HH', u'UW1']]\n",
-      "being [[u'B', u'IY1', u'IH0', u'NG']]\n",
-      "little [[u'L', u'IH1', u'T', u'AH0', u'L']]\n",
-      "was [[u'W', u'AA1', u'Z'], [u'W', u'AH1', u'Z'], [u'W', u'AH0', u'Z'], [u'W', u'AO1', u'Z']]\n",
-      "not [[u'N', u'AA1', u'T']]\n",
-      "big [[u'B', u'IH1', u'G']]\n",
-      "He [[u'HH', u'IY1']]\n",
-      "always [[u'AO1', u'L', u'W', u'EY2', u'Z'], [u'AO1', u'L', u'W', u'IY0', u'Z']]\n",
-      "walked [[u'W', u'AO1', u'K', u'T']]\n",
-      "upon [[u'AH0', u'P', u'AA1', u'N']]\n",
-      "his [[u'HH', u'IH1', u'Z'], [u'HH', u'IH0', u'Z']]\n",
-      "feet [[u'F', u'IY1', u'T']]\n",
-      "And [[u'AH0', u'N', u'D'], [u'AE1', u'N', u'D']]\n",
-      "never [[u'N', u'EH1', u'V', u'ER0']]\n",
-      "fasted [[u'F', u'AE1', u'S', u'T', u'IH0', u'D']]\n",
-      "when [[u'W', u'EH1', u'N'], [u'HH', u'W', u'EH1', u'N'], [u'W', u'IH1', u'N'], [u'HH', u'W', u'IH1', u'N']]\n",
-      "he [[u'HH', u'IY1']]\n",
-      "eat [[u'IY1', u'T']]\n",
-      "When [[u'W', u'EH1', u'N'], [u'HH', u'W', u'EH1', u'N'], [u'W', u'IH1', u'N'], [u'HH', u'W', u'IH1', u'N']]\n",
-      "from [[u'F', u'R', u'AH1', u'M'], [u'F', u'ER0', u'M']]\n",
-      "a [[u'AH0'], [u'EY1']]\n",
-      "place [[u'P', u'L', u'EY1', u'S']]\n",
-      "he [[u'HH', u'IY1']]\n",
-      "run [[u'R', u'AH1', u'N']]\n",
-      "away [[u'AH0', u'W', u'EY1']]\n",
-      "He [[u'HH', u'IY1']]\n",
-      "never [[u'N', u'EH1', u'V', u'ER0']]\n",
-      "at [[u'AE1', u'T']]\n",
-      "the [[u'DH', u'AH0'], [u'DH', u'AH1'], [u'DH', u'IY0']]\n",
-      "place [[u'P', u'L', u'EY1', u'S']]\n",
-      "did [[u'D', u'IH1', u'D'], [u'D', u'IH0', u'D']]\n",
-      "stay [[u'S', u'T', u'EY1']]\n",
-      "And [[u'AH0', u'N', u'D'], [u'AE1', u'N', u'D']]\n",
-      "while [[u'W', u'AY1', u'L'], [u'HH', u'W', u'AY1', u'L']]\n",
-      "he [[u'HH', u'IY1']]\n",
-      "run [[u'R', u'AH1', u'N']]\n",
-      "as [[u'AE1', u'Z'], [u'EH1', u'Z']]\n",
-      "I [[u'AY1']]\n",
-      "am [[u'AE1', u'M'], [u'EY1', u'EH1', u'M']]\n",
-      "told [[u'T', u'OW1', u'L', u'D']]\n",
-      "He [[u'HH', u'IY1']]\n",
-      "never [[u'N', u'EH1', u'V', u'ER0']]\n",
-      "stood [[u'S', u'T', u'UH1', u'D']]\n",
-      "still [[u'S', u'T', u'IH1', u'L']]\n",
-      "for [[u'F', u'AO1', u'R'], [u'F', u'ER0'], [u'F', u'R', u'ER0']]\n",
-      "young [[u'Y', u'AH1', u'NG']]\n",
-      "or [[u'AO1', u'R'], [u'ER0']]\n",
-      "old [[u'OW1', u'L', u'D']]\n",
-      "He [[u'HH', u'IY1']]\n",
-      "often [[u'AO1', u'F', u'AH0', u'N'], [u'AO1', u'F', u'T', u'AH0', u'N']]\n",
-      "squeaked [[u'S', u'K', u'W', u'IY1', u'K', u'T']]\n",
-      "and [[u'AH0', u'N', u'D'], [u'AE1', u'N', u'D']]\n",
-      "sometimes [[u'S', u'AH0', u'M', u'T', u'AY1', u'M', u'Z'], [u'S', u'AH1', u'M', u'T', u'AY2', u'M', u'Z']]\n",
-      "violent [[u'V', u'AY1', u'AH0', u'L', u'AH0', u'N', u'T'], [u'V', u'AY1', u'L', u'AH0', u'N', u'T']]\n",
-      "And [[u'AH0', u'N', u'D'], [u'AE1', u'N', u'D']]\n",
-      "when [[u'W', u'EH1', u'N'], [u'HH', u'W', u'EH1', u'N'], [u'W', u'IH1', u'N'], [u'HH', u'W', u'IH1', u'N']]\n",
-      "he [[u'HH', u'IY1']]\n",
-      "squeaked [[u'S', u'K', u'W', u'IY1', u'K', u'T']]\n",
-      "he [[u'HH', u'IY1']]\n",
-      "never [[u'N', u'EH1', u'V', u'ER0']]\n",
-      "was [[u'W', u'AA1', u'Z'], [u'W', u'AH1', u'Z'], [u'W', u'AH0', u'Z'], [u'W', u'AO1', u'Z']]\n",
-      "silent [[u'S', u'AY1', u'L', u'AH0', u'N', u'T']]\n",
-      "Though [[u'DH', u'OW1']]\n",
-      "never [[u'N', u'EH1', u'V', u'ER0']]\n",
-      "instructed [[u'IH0', u'N', u'S', u'T', u'R', u'AH1', u'K', u'T', u'AH0', u'D'], [u'IH0', u'N', u'S', u'T', u'R', u'AH1', u'K', u'T', u'IH0', u'D']]\n",
-      "by [[u'B', u'AY1']]\n",
-      "a [[u'AH0'], [u'EY1']]\n",
-      "cat [[u'K', u'AE1', u'T']]\n",
-      "He [[u'HH', u'IY1']]\n",
-      "knew [[u'N', u'UW1'], [u'N', u'Y', u'UW1']]\n",
-      "a [[u'AH0'], [u'EY1']]\n",
-      "mouse [[u'M', u'AW1', u'S']]\n",
-      "was [[u'W', u'AA1', u'Z'], [u'W', u'AH1', u'Z'], [u'W', u'AH0', u'Z'], [u'W', u'AO1', u'Z']]\n",
-      "not [[u'N', u'AA1', u'T']]\n",
-      "a [[u'AH0'], [u'EY1']]\n",
-      "rat [[u'R', u'AE1', u'T']]\n",
-      "One [[u'W', u'AH1', u'N'], [u'HH', u'W', u'AH1', u'N']]\n",
-      "day [[u'D', u'EY1']]\n",
-      "as [[u'AE1', u'Z'], [u'EH1', u'Z']]\n",
-      "I [[u'AY1']]\n",
-      "am [[u'AE1', u'M'], [u'EY1', u'EH1', u'M']]\n",
-      "certified [[u'S', u'ER1', u'T', u'AH0', u'F', u'AY2', u'D']]\n",
-      "He [[u'HH', u'IY1']]\n",
-      "took [[u'T', u'UH1', u'K']]\n",
-      "a [[u'AH0'], [u'EY1']]\n",
-      "whim [[u'W', u'IH1', u'M'], [u'HH', u'W', u'IH1', u'M']]\n",
-      "and [[u'AH0', u'N', u'D'], [u'AE1', u'N', u'D']]\n",
-      "fairly [[u'F', u'EH1', u'R', u'L', u'IY0']]\n",
-      "died [[u'D', u'AY1', u'D']]\n",
-      "And [[u'AH0', u'N', u'D'], [u'AE1', u'N', u'D']]\n",
-      "as [[u'AE1', u'Z'], [u'EH1', u'Z']]\n",
-      "I [[u'AY1']]\n",
-      "am [[u'AE1', u'M'], [u'EY1', u'EH1', u'M']]\n",
-      "told [[u'T', u'OW1', u'L', u'D']]\n",
-      "by [[u'B', u'AY1']]\n",
-      "men [[u'M', u'EH1', u'N']]\n",
-      "of [[u'AH1', u'V'], [u'AH0', u'V']]\n",
-      "sense [[u'S', u'EH1', u'N', u'S']]\n",
-      "He [[u'HH', u'IY1']]\n",
-      "never [[u'N', u'EH1', u'V', u'ER0']]\n",
-      "has [[u'HH', u'AE1', u'Z'], [u'HH', u'AH0', u'Z']]\n",
-      "been [[u'B', u'IH1', u'N'], [u'B', u'AH0', u'N'], [u'B', u'IH0', u'N']]\n",
-      "living [[u'L', u'IH1', u'V', u'IH0', u'NG']]\n",
-      "since [[u'S', u'IH1', u'N', u'S']]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk.corpus import cmudict\n",
+    "from itertools import izip_longest, chain\n",
     "d = cmudict.dict()\n",
     "\n",
     "poem_file = open('data/guinea_pig.txt')\n",
     "corpus = poem_file.readlines()\n",
     "poem_file.close()\n",
     "\n",
-    "poem_structure = [\n",
+    "poem_structure_1 = [\n",
     "    (8, [1,3,5,7],),\n",
     "    (8, [1,3,5,7],),\n",
     "    (8, [1,3,5,7],),\n",
     "    (8, [1,3,5,7],),\n",
     "]\n",
-    "for line in corpus:\n",
-    "    for token in tokenize(line):\n",
-    "        print token, d.get(token.lower())"
+    "# for line in corpus:\n",
+    "#     for token in tokenize(line):\n",
+    "#         print token, d.get(token.lower())"
    ]
   },
   {
@@ -369,27 +253,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[u'W', u'AA1', u'Z'] [u'B', u'IH0', u'K', u'AO1', u'Z'] False\n",
-      "[u'W', u'AA1', u'Z'] [u'B', u'IH0', u'K', u'AH1', u'Z'] False\n",
-      "[u'W', u'AA1', u'Z'] [u'B', u'IH0', u'K', u'AA1', u'Z'] True\n",
-      "[u'W', u'AA1', u'Z'] [u'B', u'IH0', u'K', u'AH0', u'Z'] False\n",
-      "[u'W', u'AH1', u'Z'] [u'B', u'IH0', u'K', u'AO1', u'Z'] False\n",
-      "[u'W', u'AH1', u'Z'] [u'B', u'IH0', u'K', u'AH1', u'Z'] True\n",
-      "[u'W', u'AH1', u'Z'] [u'B', u'IH0', u'K', u'AA1', u'Z'] False\n",
-      "[u'W', u'AH1', u'Z'] [u'B', u'IH0', u'K', u'AH0', u'Z'] False\n",
-      "[u'W', u'AH0', u'Z'] [u'B', u'IH0', u'K', u'AO1', u'Z'] False\n",
-      "[u'W', u'AH0', u'Z'] [u'B', u'IH0', u'K', u'AH1', u'Z'] False\n",
-      "[u'W', u'AH0', u'Z'] [u'B', u'IH0', u'K', u'AA1', u'Z'] False\n",
-      "[u'W', u'AH0', u'Z'] [u'B', u'IH0', u'K', u'AH0', u'Z'] True\n",
-      "[u'W', u'AO1', u'Z'] [u'B', u'IH0', u'K', u'AO1', u'Z'] True\n",
-      "[u'W', u'AO1', u'Z'] [u'B', u'IH0', u'K', u'AH1', u'Z'] False\n",
-      "[u'W', u'AO1', u'Z'] [u'B', u'IH0', u'K', u'AA1', u'Z'] False\n",
-      "[u'W', u'AO1', u'Z'] [u'B', u'IH0', u'K', u'AH0', u'Z'] False\n"
+      "[[u'DH', u'EH1', u'R'], [u'W', u'AA1', u'Z'], [u'AH0'], [u'L', u'IH1', u'T', u'AH0', u'L'], [u'G', u'IH1', u'N', u'IY0'], [u'P', u'IH1', u'G']] [True, True, False, True, False, True, False, True]\n",
+      "[[u'DH', u'EH1', u'R'], [u'W', u'AA1', u'Z'], [u'EY1'], [u'L', u'IH1', u'T', u'AH0', u'L'], [u'G', u'IH1', u'N', u'IY0'], [u'P', u'IH1', u'G']] [True, True, True, True, False, True, False, True]\n",
+      "[[u'DH', u'EH1', u'R'], [u'W', u'AH1', u'Z'], [u'AH0'], [u'L', u'IH1', u'T', u'AH0', u'L'], [u'G', u'IH1', u'N', u'IY0'], [u'P', u'IH1', u'G']] [True, True, False, True, False, True, False, True]\n",
+      "[[u'DH', u'EH1', u'R'], [u'W', u'AH1', u'Z'], [u'EY1'], [u'L', u'IH1', u'T', u'AH0', u'L'], [u'G', u'IH1', u'N', u'IY0'], [u'P', u'IH1', u'G']] [True, True, True, True, False, True, False, True]\n",
+      "[[u'DH', u'EH1', u'R'], [u'W', u'AH0', u'Z'], [u'AH0'], [u'L', u'IH1', u'T', u'AH0', u'L'], [u'G', u'IH1', u'N', u'IY0'], [u'P', u'IH1', u'G']] [True, False, False, True, False, True, False, True]\n",
+      "[[u'DH', u'EH1', u'R'], [u'W', u'AH0', u'Z'], [u'EY1'], [u'L', u'IH1', u'T', u'AH0', u'L'], [u'G', u'IH1', u'N', u'IY0'], [u'P', u'IH1', u'G']] [True, False, True, True, False, True, False, True]\n",
+      "[[u'DH', u'EH1', u'R'], [u'W', u'AO1', u'Z'], [u'AH0'], [u'L', u'IH1', u'T', u'AH0', u'L'], [u'G', u'IH1', u'N', u'IY0'], [u'P', u'IH1', u'G']] [True, True, False, True, False, True, False, True]\n",
+      "[[u'DH', u'EH1', u'R'], [u'W', u'AO1', u'Z'], [u'EY1'], [u'L', u'IH1', u'T', u'AH0', u'L'], [u'G', u'IH1', u'N', u'IY0'], [u'P', u'IH1', u'G']] [True, True, True, True, False, True, False, True]\n",
+      "\n",
+      "[[u'HH', u'IY1'], [u'AO1', u'L', u'W', u'EY2', u'Z'], [u'W', u'AO1', u'K', u'T'], [u'AH0', u'P', u'AA1', u'N'], [u'HH', u'IH1', u'Z'], [u'F', u'IY1', u'T']] [True, True, False, True, False, True, True, True]\n",
+      "[[u'HH', u'IY1'], [u'AO1', u'L', u'W', u'EY2', u'Z'], [u'W', u'AO1', u'K', u'T'], [u'AH0', u'P', u'AA1', u'N'], [u'HH', u'IH0', u'Z'], [u'F', u'IY1', u'T']] [True, True, False, True, False, True, False, True]\n",
+      "[[u'HH', u'IY1'], [u'AO1', u'L', u'W', u'IY0', u'Z'], [u'W', u'AO1', u'K', u'T'], [u'AH0', u'P', u'AA1', u'N'], [u'HH', u'IH1', u'Z'], [u'F', u'IY1', u'T']] [True, True, False, True, False, True, True, True]\n",
+      "[[u'HH', u'IY1'], [u'AO1', u'L', u'W', u'IY0', u'Z'], [u'W', u'AO1', u'K', u'T'], [u'AH0', u'P', u'AA1', u'N'], [u'HH', u'IH0', u'Z'], [u'F', u'IY1', u'T']] [True, True, False, True, False, True, False, True]\n",
+      "\n",
+      "[[u'AH0', u'N', u'D'], [u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'AE1', u'Z'], [u'AY1'], [u'AE1', u'M'], [u'T', u'OW1', u'L', u'D']] [False, True, True, True, True, True, True, True]\n",
+      "[[u'AH0', u'N', u'D'], [u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'AE1', u'Z'], [u'AY1'], [u'EY1', u'EH1', u'M'], [u'T', u'OW1', u'L', u'D']] [False, True, True, True, True, True, True, True, True]\n",
+      "[[u'AH0', u'N', u'D'], [u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'EH1', u'Z'], [u'AY1'], [u'AE1', u'M'], [u'T', u'OW1', u'L', u'D']] [False, True, True, True, True, True, True, True]\n",
+      "[[u'AH0', u'N', u'D'], [u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'EH1', u'Z'], [u'AY1'], [u'EY1', u'EH1', u'M'], [u'T', u'OW1', u'L', u'D']] [False, True, True, True, True, True, True, True, True]\n",
+      "[[u'AH0', u'N', u'D'], [u'HH', u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'AE1', u'Z'], [u'AY1'], [u'AE1', u'M'], [u'T', u'OW1', u'L', u'D']] [False, True, True, True, True, True, True, True]\n",
+      "[[u'AH0', u'N', u'D'], [u'HH', u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'AE1', u'Z'], [u'AY1'], [u'EY1', u'EH1', u'M'], [u'T', u'OW1', u'L', u'D']] [False, True, True, True, True, True, True, True, True]\n",
+      "[[u'AH0', u'N', u'D'], [u'HH', u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'EH1', u'Z'], [u'AY1'], [u'AE1', u'M'], [u'T', u'OW1', u'L', u'D']] [False, True, True, True, True, True, True, True]\n",
+      "[[u'AH0', u'N', u'D'], [u'HH', u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'EH1', u'Z'], [u'AY1'], [u'EY1', u'EH1', u'M'], [u'T', u'OW1', u'L', u'D']] [False, True, True, True, True, True, True, True, True]\n",
+      "[[u'AE1', u'N', u'D'], [u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'AE1', u'Z'], [u'AY1'], [u'AE1', u'M'], [u'T', u'OW1', u'L', u'D']] [True, True, True, True, True, True, True, True]\n",
+      "[[u'AE1', u'N', u'D'], [u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'AE1', u'Z'], [u'AY1'], [u'EY1', u'EH1', u'M'], [u'T', u'OW1', u'L', u'D']] [True, True, True, True, True, True, True, True, True]\n",
+      "[[u'AE1', u'N', u'D'], [u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'EH1', u'Z'], [u'AY1'], [u'AE1', u'M'], [u'T', u'OW1', u'L', u'D']] [True, True, True, True, True, True, True, True]\n",
+      "[[u'AE1', u'N', u'D'], [u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'EH1', u'Z'], [u'AY1'], [u'EY1', u'EH1', u'M'], [u'T', u'OW1', u'L', u'D']] [True, True, True, True, True, True, True, True, True]\n",
+      "[[u'AE1', u'N', u'D'], [u'HH', u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'AE1', u'Z'], [u'AY1'], [u'AE1', u'M'], [u'T', u'OW1', u'L', u'D']] [True, True, True, True, True, True, True, True]\n",
+      "[[u'AE1', u'N', u'D'], [u'HH', u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'AE1', u'Z'], [u'AY1'], [u'EY1', u'EH1', u'M'], [u'T', u'OW1', u'L', u'D']] [True, True, True, True, True, True, True, True, True]\n",
+      "[[u'AE1', u'N', u'D'], [u'HH', u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'EH1', u'Z'], [u'AY1'], [u'AE1', u'M'], [u'T', u'OW1', u'L', u'D']] [True, True, True, True, True, True, True, True]\n",
+      "[[u'AE1', u'N', u'D'], [u'HH', u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'EH1', u'Z'], [u'AY1'], [u'EY1', u'EH1', u'M'], [u'T', u'OW1', u'L', u'D']] [True, True, True, True, True, True, True, True, True]\n"
      ]
     }
    ],
    "source": [
-    "# TODO:\n",
     "def num_of_syllables(phonetic_translation):\n",
     "    number_of_syllables = 0\n",
     "    for el in phonetic_translation:\n",
@@ -399,14 +296,41 @@
     "            pass\n",
     "    return number_of_syllables\n",
     "        \n",
-    "\n",
     "def is_stressed(phoneme):\n",
     "    if phoneme[-1] == '1':\n",
     "        return True\n",
     "    else:\n",
     "        return False\n",
     "\n",
-    "def apply_structure(line):\n",
+    "def stress_mask(phonemes):\n",
+    "    return [is_stressed(ph) for ph in phonemes if is_vowel(ph)]\n",
+    "\n",
+    "def combinations(*args):\n",
+    "    if len(args) == 1:\n",
+    "        return [[x] for x in args[0]]\n",
+    "    combs = []\n",
+    "    for item in args[0]:\n",
+    "        for x in combinations(*args[1:]):\n",
+    "            combs.append([item] + x)\n",
+    "    return combs\n",
+    "\n",
+    "\n",
+    "# helper function of validate_couplet(x,y)\n",
+    "def validate_line(line, structure):\n",
+    "    line_phonemes = [] \n",
+    "    words = line.split(' ')\n",
+    "    for word in words:\n",
+    "        word_phonemes = d.get(word)\n",
+    "        line_phonemes.append(word_phonemes)\n",
+    "    for candidate in combinations(*line_phonemes):\n",
+    "        stresses = stress_mask(chain.from_iterable(candidate))\n",
+    "        print candidate, stresses\n",
+    "    \n",
+    "        \n",
+    "\n",
+    "\n",
+    "#returns true or false; does a couplet answer to the above mentioned scheme or not?\n",
+    "def validate_couplet(couplet, structure):\n",
     "    pass\n",
     "\n",
     "def is_vowel(sound):\n",
@@ -419,10 +343,27 @@
     "        return pron1[-(idx + 1):] == pron2[-(idx + 1):]\n",
     "    else:\n",
     "        return False\n",
-    "\n",
-    "for pron1 in d.get('was'):\n",
-    "    for pron2 in d.get('because'):\n",
-    "        print pron1, pron2, is_rhyme(pron1, pron2)"
+    "# #test\n",
+    "# for pron1 in d.get('was'):\n",
+    "#     for pron2 in d.get('because'):\n",
+    "#         print pron1, pron2, is_rhyme(pron1, pron2)\n",
+    "combinations([1,2,3],[4],[5,6],[7,8,9])\n",
+    "validate_line(\"there was a little guinea pig\", [1,3,5,7])\n",
+    "print\n",
+    "validate_line(\"he always walked upon his feet\", None)\n",
+    "print\n",
+    "validate_line(\"and while he run as i am told\", None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "d.get(\"there was\")"
    ]
   },
   {
